@@ -26,7 +26,7 @@ import edu.umd.cs.piccolo.util.PDimension;
     private final CLModelViewTransform3D mvt;
     private final DoubleRange valueRange;
     
-    private double clickXOffset; // x-offset of mouse click from dragNode's origin, in parent node's coordinate frame
+    private double clickXOffset, clickYOffset; // offset of mouse click from dragNode's origin, in parent node's coordinate frame
     
     public PlateAreaDragHandler( PNode dragNode, Capacitor capacitor, CLModelViewTransform3D mvt, DoubleRange valueRange ) {
         this.dragNode = dragNode;
@@ -38,9 +38,10 @@ import edu.umd.cs.piccolo.util.PDimension;
     @Override
     protected void startDrag(PInputEvent event) {
         super.startDrag( event );
-        double xMouse = event.getPositionRelativeTo( dragNode.getParent() ).getX();
-        double xOrigin = mvt.modelToViewDelta( -( capacitor.getPlateWidth() / 2 ), 0, 0 ).getX();
-        clickXOffset = xMouse - xOrigin;
+        Point2D pMouse = event.getPositionRelativeTo( dragNode.getParent() );
+        Point2D pOrigin = mvt.modelToViewDelta( -( capacitor.getPlateWidth() / 2 ), 0, ( capacitor.getPlateWidth() / 2 ) );
+        clickXOffset = pMouse.getX() - pOrigin.getX();
+        clickYOffset = pMouse.getY() - pOrigin.getY();
     }
     
     @Override
@@ -50,10 +51,11 @@ import edu.umd.cs.piccolo.util.PDimension;
         double dx = delta.getWidth();
         double dy = delta.getHeight();
         // only allow dragging down to the left, or up to the right
-        if ( ( dx < 0 && dy > 0 ) || ( dx > 0 && dy < 0 ) ) {
+        if ( ( dx < 0 && dy >= 0 ) || ( dx > 0 && dy <= 0 ) ) {
             Point2D pMouse = event.getPositionRelativeTo( dragNode.getParent() );
             double xView = pMouse.getX() - clickXOffset;
-            double xModel = 2 * mvt.viewToModelDelta( -xView, 0 ).getX(); // use x only, y dimension is foreshortened for pseudo-3D perspective
+            double yView = pMouse.getY() - clickYOffset;
+            double xModel = 2 * mvt.viewToModelDelta( -xView, yView ).getX();
             if ( xModel > valueRange.getMax() ) {
                 xModel = valueRange.getMax();
             }
